--- a/Projects/pj4-tareas/public/index.html
+++ b/Projects/pj4-tareas/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Contador de Clics</title>
+  <title>App Tareas</title>
 </head>
 
 <body>
